# yubikey-challenge-reponse

./: CMakeLists.txt  LICENSE.txt  README.md
src/: LOG.cpp  LOG.h  byte_array.h  main.cpp  prog_opts.cpp  prog_opts.h  yubi.cpp  yubi.h
